# swish-utilities

./: .gitignore  BUILD.md  LICENSE.txt  README.md  auth.json  cli_util.py  dc_exec.bat  default_config.json  dip_help.py  requirements.txt  requirenments.txt  run.py  setup.cfg  swish_snow_helper.sh  user-guide.md
.github/actions/build-pyinstaller/: action.yml
.github/workflows/: build-release.yaml
custom/: tokens.txt
el7-build/: build-el7.sh  requirements-el7.txt  run-build.sh
input2/: sevrty.json  sevrty2.csv  zzz.xlsb
mac-build/: requirements.txt
output/: sevrty_processed.csv
src/: cleaner.py  data_filter.py  extractor_resource.py  file.py  settings.py  swish_utilities_exec.py  token_api.py
tests/: common.py  test_config.py  test_extracor.py  test_filtering.py  test_proccessing.py  test_selective_extraction.py
tests/data/: custom_ids_list.csv  fake_auth.json  fieldname_ids.csv  ip_ttt_config.json  mapping_file.csv  non_ascii.json  parent_ids.csv  patterns_config.json  preprocess_patterns_config.json  sys_audit.json  sys_ids_list.csv  test_config.json  test_filter_config.json  test_white_list_config.json  user_types.csv
tests/data/custom/: important_tokens.txt
tests/data/input/: input.json
tests/data/input_boolean/: input_boolean.json
tests/data/input_csv/: input_csv.csv
tests/data/input_default/: input_default.json
tests/data/input_inner_json/: input_inner_json.json
tests/data/input_ip_ttt/: ip_ttt.csv
tests/data/input_multi_extensions/: test_multi_2.multi.csv
tests/data/input_pattern/: input_pattern.csv
(+6 files in other folders)
