[pycodestyle]
max-line-length = 120
[metadata]
name = swish
version = 0.241.0
author = Ilya Kessel
author_email = ilya.kessel@swish.ai
description = Swish utilities package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swish-ai/swish-utilities/tree/master/
project_urls =
    Bug Tracker = https://github.com/swish-ai/swish-utilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache License, Version 2.0
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    spytest==6.2.5
    requests==2.26.0
    requests-mock==1.9.3
    urllib3==1.26.7
    numpy==1.21.4
    pandas==1.3.4
    flashtext==2.7
    click==8.0.3

[options.package_data]
#* = *.json
[options.packages.find]
where = src